# Engine

./: CMakeLists.txt
apps/app_common/: render_packets.h  test_shared.h
src/: CMakeLists.txt
src/client/: key_input.h  window.h
src/client/private/: window.cpp
src/client/tests/: window_tests.cpp
src/core/: CMakeLists.txt  concurrency.h  debug.h  function.h  mpmc_bounded_queue.h  os.h  portability.h
src/core/private/: allocator_virtual.cpp  concurrency.cpp  concurrency.inl
src/core/tests/: allocator_tests.cpp  array_tests.cpp  file_tests.cpp  uuid_tests.cpp  vector_tests.cpp
src/gpu/: backend.h  enum.h  manager.h  resources.h  types.h
src/gpu/private/: command_list.cpp  command_list.inl  enum.cpp  manager.cpp
src/gpu/tests/: gpu_tests.cpp
src/gpu_d3d12/: d3d12_backend.h  d3d12_resources.h
src/gpu_d3d12/private/: d3d12_backend.cpp
src/gpu_tf/: CMakeLists.txt  dll.h  tf_backend.h  tf_command_list.h  tf_compile_context.h  tf_device.h  tf_resources.h  tf_types.h
src/gpu_tf/private/: tf_backend.cpp  tf_command_list.cpp  tf_compile_context.cpp  tf_types.cpp
src/gpu_tf/private/shaders/dx12/: default_cs.h
src/gpu_tf/private/shaders/vlk/: build_shaders.bat  default_cs.glsl  default_cs.h  default_ps.glsl  default_ps.h  default_vs.glsl  default_vs.h
src/gpu_vlk/: CMakeLists.txt  dll.h  vlk_backend.h  vlk_command_list.h  vlk_compile_context.h  vlk_descriptor_heap_allocator.h  vlk_device.h  vlk_linear_heap_allocator.h  vlk_resources.h  vlk_types.h
src/gpu_vlk/private/: vlk_backend.cpp  vlk_command_list.cpp  vlk_compile_context.cpp  vlk_descriptor_heap_allocator.cpp  vlk_device.cpp  vlk_linear_heap_allocator.cpp  vlk_types.cpp
src/gpu_vlk/private/shaders/: build_shaders.bat  default_cs.glsl  default_ps.glsl  default_vs.glsl
src/graphics/: CMakeLists.txt  model.h
src/graphics/converters/: converter_model.cpp  converter_shader.cpp  converter_texture.cpp  shader_ast.h  shader_parser.cpp  shader_parser.h  shader_preprocessor.cpp  shader_preprocessor.h
src/graphics/private/: pipeline.cpp  render_graph.cpp  shader.cpp  shader_impl.h
src/graphics/tests/: shader_parser_tests.cpp  shader_tests.cpp
src/image/private/: color.cpp  dds.cpp  image.cpp  process.cpp
src/imgui/private/: manager.cpp
src/resource/: ref.h
src/serialization/: serializer.h
(+12 files in other folders)
